Fixed link style.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <title>Excursion</title>
-    <link href="resources/css/style.css" rel="stylesheet" type="text/css"
+    <link href="resources/css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-  <h1>Discover hidden places in the world around you</h1>
-  <div class=""><a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html"> Download Excursion (Coming soon!)</a></div>
+  	<h1>Discover hidden places in the world around you</h1>
+  	<div><a id="link" href="http://www.dictionary.com/browse/excursion"> Download Excursion (Coming soon!)</a></div>
+
+  	<div></div>
+
   
   </body>
 </html>
