Added all text.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
     <title>Excursion</title>
     <link href="resources/css/style.css" rel="stylesheet" type="text/css">
   </head>
+
   <body>
   	<h1>Discover hidden places in the world around you</h1>
   	<div><a id="link" href="http://www.dictionary.com/browse/excursion"> Download Excursion (Coming soon!)</a></div>
 
-  	<div></div>
+  	
+
+  	<h2>Your Personal Travel Guide</h2>
+  		<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+  	
+
+  	<h2>Coming Soon for iPhone and Android</h2>
+
+
+  	<div><a id="link" href="http://www.dictionary.com/browse/excursion"> Download Excursion (Coming soon!)</a></div>
+
+  	<p>© Excursion</p>
+
+
+
+
+
 
   
   </body>
