--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
   	<h2>Your Personal Travel Guide</h2>
   		<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
   	
+  	<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"><br />
+
+  	<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png">
 
   	<h2>Coming Soon for iPhone and Android</h2>
 
 
   	<div><a id="link" href="http://www.dictionary.com/browse/excursion"> Download Excursion (Coming soon!)</a></div>
 
-  	<p>© Excursion</p>
+  	<p class="trademark">© Excursion</p>
 
 
 
