--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   	<h1>Discover hidden places in the world around you</h1>
   	<div><a id="link" href="http://www.dictionary.com/browse/excursion"> Download Excursion (Coming soon!)</a></div>
 
-  	<video src="excursion.mp4" height="" width="" autoplay>Video not supported</video>
+  	<video src="resources/videos/excursion.mp4" height="" width="" autoplay>Video not supported</video>
   	
 
   	<h2>Your Personal Travel Guide</h2>
 
   		<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
   	
-  	<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg"><br />
+  	<img src="resources/images/camp.jpg"><br />
 
-  	<img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png">
+  	<img src="resources/images/phone.png">
 
   	<h2>Coming Soon for iPhone and Android</h2>
 
