--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
   		<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
   	
-  	<img src="resources/images/camp.jpg"><br />
+  	<p><img src="resources/images/camp.jpg"></p>
 
-  	<img src="resources/images/phone.png">
+  	<p><img src="resources/images/phone.png"></p>
 
   	<h2>Coming Soon for iPhone and Android</h2>
 
